test/libhyperion/syntaxTests/conversion/explicit_conversion_from_error.hyp
interface MyInterface {
    enum MyEnum { E1, E2 }
    error CustomError1(
        uint256,
        bool,
        bool[],
        address payable,
        MyInterface,
        MyEnum,
        function (string memory) external returns (uint)
    );
}

contract Test {
    function testFunction(string memory) external returns (uint) {}

    function test() public {
        MyInterface instance = MyInterface(msg.sender);
        bool[] calldata arr;
        address payable addr;
        bytes4(MyInterface.CustomEror1);
        bytes4(MyInterface.CustomError1());
        bytes4(MyInterface.CustomError1(1, true, arr, addr, instance, MyInterface.MyEnum.E1, this.testFunction));
        address(MyInterface.CustomError1);
    }
}
// ----
// TypeError 4890: (192-246): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
